--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
         <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-                <p class="apresentacao__conteudo__paragrafo">Olá! Sou Joana Santos, desenvolvedora 
+                <p class="apresentacao__conteudo__paragrafo">Olá! Sou Bruno Machado, desenvolvedora 
                 Front-end com especialidade em React, HTML e
                 CSS. Ajudo pequenos negócios e designers a 
                 colocarem em prática boas ideias. Vamos 
                 conversar?</p>
                 <div class="apresentacao__links">
-                    <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                    <a class="apresentacao__links__link"href="https://github.com/guilhermeonrails">GitHub</a>
+                    <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                    <a class="apresentacao__links__link"href="https://github.com/BM4ch4d0">
+                        <img src="/assets/Logo Github.png" alt="Logo Github">
+                        GitHub
+                    </a>
+                    <a class="apresentacao__links__link"href="https://www.linkedin.com/in/bruno-lusquinhos-407a87366/">
+                        <img src="/assets/Logo linkedin.png" alt="Logo Linkedin">
+                        Linkedin
+                    </a>
+                    <a class="apresentacao__links__link"href="https://www.twitch.tv/thabu16">
+                        <img src="/assets/Logo Twitch.png" alt="Logo Linkedin">
+                        Twitch
+                    </a>
                 </div>
             </section> 
-            <img src="imagem.png" alt="Foto da Joana Santos programando">
-               
+            <img src="/assets/Imagem.png" alt="Foto da Joana Santos programando">
         </main>
-        <footer></footer>
+        <footer class="rodape" >
+            <p>Desenvolvido por Bruno</p>
+
+        </footer>
     </body>
     </html>
